# knapsack-art-gallery

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
input/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt
output/: input01.-custom.txt  input01.-highvalue.txt
src/: art.cpp  art.h  fileio.cpp  fileio.h  main.cpp  sorts.cpp  sorts.h
